tests/baselines/reference/parserForStatement3.errors.txt
parserForStatement3.ts(1,5): error TS2304: Cannot find name 'd'.
parserForStatement3.ts(1,10): error TS2304: Cannot find name '_'.
parserForStatement3.ts(1,15): error TS2304: Cannot find name 'a'.
parserForStatement3.ts(1,18): error TS2304: Cannot find name '_'.
parserForStatement3.ts(1,23): error TS2304: Cannot find name 'a'.
parserForStatement3.ts(1,30): error TS2304: Cannot find name 'b'.


==== parserForStatement3.ts (6 errors) ====
    for(d in _.jh[a]=_.jh[a]||[],b);
        ~
!!! error TS2304: Cannot find name 'd'.
             ~
!!! error TS2304: Cannot find name '_'.
                  ~
!!! error TS2304: Cannot find name 'a'.
                     ~
!!! error TS2304: Cannot find name '_'.
                          ~
!!! error TS2304: Cannot find name 'a'.
                                 ~
!!! error TS2304: Cannot find name 'b'.